Correction for scrollbar in option windows

--- a/project/css/more/options-base.css
+++ b/project/css/more/options-base.css
@@ -2,10 +2,11 @@
 	MISCELLANOUS
    ============== */
 
-body { padding: 40px 20px 20px; }
+body { padding: 40px 0 20px 20px; }
 
 #options-container {
 	/* Box-model */
+	padding-right: 20px;
 	width: 100%;
 	height: 100%;
 	overflow-y: auto;
